<resources>
    <string name="app_name">Zemoga App test</string>
    <string name="title_home">ALL POSTS</string>
    <string name="title_dashboard">FAVORITES</string>
    <string name="posts">Posts</string>
    <string name="lbl_post_title_sample">sunt aut facere repellat provident occaecati excepturi optio reprehenderit</string>
    <string name="undo">Deshacer</string>
    <string name="delete">delete post list</string>
    <string name="update">update</string>
    <string name="descripcion">Descripción</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="comments">Comments</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
</resources>
