<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.postsdetails.PostsDetailsActivity">

    <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <ProgressBar
                    android:id="@+id/details_progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="80dp"
                    android:minHeight="80dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_desc_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/descripcion"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_desc_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/descripcion"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintLeft_toLeftOf="@id/tv_desc_title"
                    app:layout_constraintRight_toRightOf="@id/tv_desc_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_desc_title" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/user"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/tv_desc_content"
                    app:layout_constraintRight_toRightOf="@id/tv_desc_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_desc_content" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/name"
                    app:layout_constraintLeft_toLeftOf="@id/tv_user_title"
                    app:layout_constraintRight_toRightOf="@id/tv_user_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_title" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/email"
                    app:layout_constraintLeft_toLeftOf="@id/tv_user_name"
                    app:layout_constraintRight_toRightOf="@id/tv_user_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/phone"
                    app:layout_constraintLeft_toLeftOf="@id/tv_user_email"
                    app:layout_constraintRight_toRightOf="@id/tv_user_email"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_email" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_website"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/website"
                    app:layout_constraintLeft_toLeftOf="@id/tv_user_phone"
                    app:layout_constraintRight_toRightOf="@id/tv_user_phone"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_phone" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_comments_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/comments"
                    android:background="@android:color/darker_gray"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_user_website"
                    app:layout_constraintRight_toRightOf="@+id/tv_user_website"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_website" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_comments_list"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_comments_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>